--- a/system/nginx.conf
+++ b/system/nginx.conf
@@ -3,7 +3,7 @@
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
 user nobody nobody;
-worker_processes auto;
+worker_processes 2;
 error_log /var/log/nginx/error.log;
 pid /var/run/nginx.pid;
 
@@ -59,7 +59,7 @@ http {
 
 #    location /static {    
 #        autoindex on;    
-#        alias /home/ec2-user/schoolvotes/voters/static;
+#        alias /home/ec2-user/schoolvotes/static;
 #    }
 
         # redirect server error pages to the static page /40x.html
@@ -139,9 +139,14 @@ http {
     auth_request_set $auth_cookie $upstream_http_set_cookie;
     add_header Set-Cookie $auth_cookie;
         }
-#      location /static {
-#	alias     /home/ec2-user/schoolvotes/static;
-#        }
+      location /static/ {
+	alias     /home/ec2-user/schoolvotes/static/;
+        }
+
+   location /media {
+        autoindex on;
+        alias /home/ec2-user/schoolvotes/media/;
+    }
 
         error_page 404 /404.html;
             location = /40x.html {
