added nginx error html, modified deply scrupt

--- a/system/nginx.conf
+++ b/system/nginx.conf
@@ -152,7 +152,9 @@ http {
             location = /40x.html {
         }
         error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
+            location = /nginx-error.html {
+		root /home/ec2-user/schoolvotes/static;
+		internal;
         }
     }
 
