--- a/system/nginx.conf
+++ b/system/nginx.conf
@@ -1,6 +1,5 @@
 # For more information on configuration, see:
 #   * Official English Documentation: http://nginx.org/en/docs/
-#   * Official Russian Documentation: http://nginx.org/ru/docs/
 
 user nobody nobody;
 worker_processes 2;
@@ -11,7 +10,8 @@ pid /var/run/nginx.pid;
 include /usr/share/nginx/modules/*.conf;
 
 events {
-    worker_connections 1024;
+	worker_connections 1024;
+	accept_mutex on;
 }
 
 http {
@@ -37,66 +37,7 @@ http {
 
     index   index.html index.htm;
 
-#    server {
-#        listen       80 default_server;
-#        listen       [::]:80 default_server;
-##        server_name  schoolvotes.org;
-#        root         /usr/share/nginx/html;
-#    access_log  /var/log/nginx/example.log;
-#
 
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-
-#        location / {
-#        proxy_pass http://127.0.0.1:8000;
-#        proxy_set_header Host $host;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#    include             /etc/nginx/mime.types;
-
-#        }
-
-
-#    location /static {    
-#        autoindex on;    
-#        alias /home/ec2-user/schoolvotes/static;
-#    }
-
-        # redirect server error pages to the static page /40x.html
-        
-#        error_page 404 /404.html;
-#            location = /40x.html {
-#        }
-
-        # redirect server error pages to the static page /50x.html
-        #
-#        error_page 500 502 503 504 /50x.html;
-#            location = /50x.html {
-#        }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
-#    }
 
 # Settings for a TLS enabled server.
 #
@@ -104,8 +45,13 @@ http {
         listen       443 ssl http2 default_server;
         listen       [::]:443 ssl http2 default_server;
         server_name  schoolvotes.org;
+	server_tokens off;
+
+	access_log	/var/log/nginx/schoolvotes.org.access.log;
+	error_log	/var/log/nginx/schoolvotes.org.error.log;
         root         /usr/share/nginx/html;
 
+	ssl 		on;
 	ssl_certificate "/etc/letsencrypt/live/schoolvotes.org/fullchain.pem";
 	ssl_certificate_key "/etc/letsencrypt/live/schoolvotes.org/privkey.pem";
 #        # It is *strongly* recommended to generate unique DH parameters
@@ -127,42 +73,49 @@ http {
 
     # pass information via X-User and X-Email headers to backend,
     # requires running with --set-xauthrequest flag
-    auth_request_set $user   $upstream_http_x_auth_request_user;
-    auth_request_set $email  $upstream_http_x_auth_request_email;
-    proxy_set_header X-User  $user;
-    proxy_set_header X-Email $email;
-    proxy_redirect off;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Scheme $scheme;
+		auth_request_set $user   $upstream_http_x_auth_request_user;
+		auth_request_set $email  $upstream_http_x_auth_request_email;
+		proxy_set_header X-User  $user;
+		proxy_set_header X-Email $email;
+		proxy_redirect off;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Scheme $scheme;
 
     # if you enabled --cookie-refresh, this is needed for it to work with auth_request
-    auth_request_set $auth_cookie $upstream_http_set_cookie;
-    add_header Set-Cookie $auth_cookie;
+		auth_request_set $auth_cookie $upstream_http_set_cookie;
+		add_header Set-Cookie $auth_cookie;
+		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         }
-      location /static/ {
-	alias     /home/ec2-user/schoolvotes/static/;
+        location /static/ {
+		alias     /home/ec2-user/schoolvotes/static/;
+		add_header Cache-Control 'max-age=86400';
+		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+		gzip on;
+		gzip_disable "msie6";
+		gzip_types text/plain text/css application/javascript application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml image/svg;
         }
 
-   location /media {
-        autoindex on;
-        alias /home/ec2-user/schoolvotes/media/;
-    }
+	location /media {
+		autoindex on;
+		alias /home/ec2-user/schoolvotes/media/;
+		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+	}
 
         error_page 404 /404.html;
-            location = /40x.html {
+        location = /40x.html {
         }
         error_page 500 502 503 504 /50x.html;
-            location = /nginx-error.html {
+        location = /nginx-error.html {
 		root /home/ec2-user/schoolvotes/static;
 		internal;
         }
     }
 
 	server {
-	listen 80 default_server;
- 	listen [::]:80 default_server;
- 	server_name schoolvotes.org;
- 	return 301 https://schoolvotes.org$request_uri;
+		listen 80 default_server;
+	 	listen [::]:80 default_server;
+	 	server_name schoolvotes.org;
+	 	return 301 https://schoolvotes.org$request_uri;
  	}
 
 }
