adding restart script for upstart

--- a/system/gunicorn-schoolvotes.conf
+++ b/system/gunicorn-schoolvotes.conf
@@ -1,4 +1,5 @@
-description "Gunicorn server for mysite.com"
+#!upstart
+description "Gunicorn server for schoolvotes.org"
 
 start on net-device-up
 
@@ -10,4 +11,6 @@ setuid ec2-user
 
 chdir /home/ec2-user/schoolvotes
 
-exec ../.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=4 
+#  recommend (2 x $num_cores) + 1 as the number of workers 
+exec /home/ec2-user/.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=2 --pid=/home/ec2-user/gunicorn.pid
+
