--- a/system/nginx.conf
+++ b/system/nginx.conf
@@ -68,25 +68,29 @@ http {
         include /etc/nginx/default.d/*.conf;
 #
         location / {
-		proxy_pass http://127.0.0.1:8000;
+				proxy_pass http://127.0.0.1:8000;
        		proxy_set_header Host $host;
-        	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-    # pass information via X-User and X-Email headers to backend,
-    # requires running with --set-xauthrequest flag
-		auth_request_set $user   $upstream_http_x_auth_request_user;
-		auth_request_set $email  $upstream_http_x_auth_request_email;
-		proxy_set_header X-User  $user;
-		proxy_set_header X-Email $email;
-		proxy_redirect off;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Scheme $scheme;
+			   # pass information via X-User and X-Email headers to backend,
+			   # requires running with --set-xauthrequest flag
+				auth_request_set $user   $upstream_http_x_auth_request_user;
+				auth_request_set $email  $upstream_http_x_auth_request_email;
+				proxy_set_header X-User  $user;
+				proxy_set_header X-Email $email;
+				proxy_redirect off;
+				proxy_set_header X-Real-IP $remote_addr;
+				proxy_set_header X-Scheme $scheme;
 
-    # if you enabled --cookie-refresh, this is needed for it to work with auth_request
-		auth_request_set $auth_cookie $upstream_http_set_cookie;
-		add_header Set-Cookie $auth_cookie;
-		add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    			# if you enabled --cookie-refresh, this is needed for it to work with auth_request
+				auth_request_set $auth_cookie $upstream_http_set_cookie;
+				add_header Set-Cookie $auth_cookie;
+				add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         }
+
+		  location = /google21f9fd8efa83a202.html {
+		  		root /home/ec2-user/schoolvotes/system/;
+		  }
         location /static/ {
 		alias     /home/ec2-user/schoolvotes/static/;
 		add_header Cache-Control 'max-age=86400';
@@ -120,4 +124,3 @@ http {
  	}
 
 }
-
