sitemap for about page

--- a/system/nginx.conf
+++ b/system/nginx.conf
@@ -91,6 +91,10 @@ http {
 		  location = /google21f9fd8efa83a202.html {
 		  		root /home/ec2-user/schoolvotes/system/;
 		  }
+
+		  location = /sitemap.txt {
+		     root /home/ec2-user/schoolvotes/system/;
+		  }
         location /static/ {
 		alias     /home/ec2-user/schoolvotes/static/;
 		add_header Cache-Control 'max-age=86400';
