fixed typo in sitemaps

--- a/system/nginx.conf
+++ b/system/nginx.conf
@@ -92,7 +92,7 @@ http {
 		  		root /home/ec2-user/schoolvotes/system/;
 		  }
 
-		  location = /sitemap.txt {
+		  location = /sitemaps.txt {
 		     root /home/ec2-user/schoolvotes/system/;
 		  }
         location /static/ {
