fixing pid and line break

--- a/system/supervisord.conf
+++ b/system/supervisord.conf
@@ -148,7 +148,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:gunicorn]
-command=/home/ec2-user/.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=2
+command=/home/ec2-user/.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=2 --pid=/home/ec2-user/gunicorn.pid
 directory=/home/ec2-user/schoolvotes
 user=ec2-user
 autostart=true
