added in appd configuration

--- a/system/supervisord.conf
+++ b/system/supervisord.conf
@@ -148,10 +148,11 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:gunicorn]
-command=/home/ec2-user/.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=2 --pid=/home/ec2-user/gunicorn.pid
+;command=/home/ec2-user/.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=2 --pid=/home/ec2-user/gunicorn.pid
+command=/home/ec2-user/.virtualenvs/votes_prod/bin/pyagent run -c /home/ec2-user/schoolvotes/system/appdynamics.cfg -- /home/ec2-user/.virtualenvs/votes_prod/bin/gunicorn surveys.wsgi --workers=2 --pid=/home/ec2-user/gunicorn.pid
 directory=/home/ec2-user/schoolvotes
 user=ec2-user
 autostart=true
-autorestart=true
+;autorestart=true
 redirect_stderr=true
 environment=MAIL_ACCOUNT_PWD="ltjdsgxckjdgtcvo",SECRET_KEY="7+^p_ebd)w*vhz)ciyquscpgtx_lv&!didun%%$6m-ov3ec2x&d"
